--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 			overflow: hidden;
 		}
 	</style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161052397-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-161052397-1');
+</script>
   </head>
   <body>
 
