--- a/map/index.html
+++ b/map/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta data-rh="true" property="og:image" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
 	<meta data-rh="true" name="twitter:image:src" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
-    <title>Coviz - Map of Travel Restrictions</title>
+	<title>Coviz - Map of Travel Restrictions</title>
 	<link href="https://fonts.googleapis.com/css?family=Sen:400,800&display=swap" rel="stylesheet">
-    <meta name="description" content="Coviz is a collection of data visualizations around the COVID-19 pandemic.">
+	<meta name="description" content="Coviz is a collection of data visualizations around the COVID-19 pandemic.">
 	<meta name="author" content="Sam Mehenni">
 	<style>
 		body {
-    	margin: 0;
-		font-family: 'Sen', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+			margin: 0;
+			font-family: 'Sen', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 		}
 
 		.container {
-  			position: relative
+			position: relative
 		}
 
 		iframe {
-    	display: block;
-    	background: #F5F5F5;
-    	border: none;        
-    	height: 100vh;
-    	width: 100vw;
-		z-index: 0;
+			display: block;
+			background: #F5F5F5;
+			border: none;
+			height: 100vh;
+			width: 100vw;
+			z-index: 0;
 		}
 
 		button {
 			font-family: 'Sen', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+			font-size: 80%;
 		}
 
 		.close {
@@ -50,14 +52,14 @@
 		}
 
 		.box {
-		box-shadow: 0px 0px 25px -12px rgba(0,0,0,0.5);
-  		position: absolute;
-  		bottom: 0;
-  		left: 0;
-  		width: 400px;
-  		height: 400px;
-  		background-color: #F5F5F5;
-		z-index: 2;
+			box-shadow: 0px 0px 25px -12px rgba(0, 0, 0, 0.5);
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 400px;
+			height: 400px;
+			background-color: #F5F5F5;
+			z-index: 2;
 		}
 
 		h2 {
@@ -73,88 +75,111 @@
 			padding-right: 2rem;
 		}
 
+		a {
+			color: #7A0177;
+			text-decoration: none;
+			transition-duration: 0.15s;
+			transition-timing-function: ease-in-out;
+		}
+
+		a:hover {
+			background-color: #FCCBC6;
+			transition-duration: 0.15s;
+			transition-timing-function: ease-in-out;
+		}
+
 		.legend {
-		position: absolute;
-  		top: 0;
-		left: 0;
-		right: 0;
-		margin: auto;
-  		width: 600px;
-		height: 80px;
-		z-index: 3;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
+			width: 600px;
+			height: 80px;
+			z-index: 3;
 		}
 
 		.my-legend .legend-scale ul li {
-  display: inline-block;
-  font-size: 80%;
-  list-style: none;
-  line-height: 20px;
-  vertical-align: text-top;
-  color: #777777;
-}
-.my-legend ul.legend-labels li span {
-  display: inline-block;
-  height: 10px;
-  width: 10px;
-  margin-right: 5px;
-  margin-left: 10px;
-}
+			display: inline-block;
+			font-size: 80%;
+			list-style: none;
+			line-height: 20px;
+			vertical-align: text-top;
+			color: #777777;
+		}
 
+		.my-legend ul.legend-labels li span {
+			display: inline-block;
+			height: 11px;
+			width: 11px;
+			margin-right: 5px;
+			margin-left: 10px;
+		}
 	</style>
 
-  </head>
-  <body>
+</head>
 
-    <div class="container">
-		<iframe title="COVID-19 - Map of Travel Restrictions" aria-label="World choropleth map" src="https://datawrapper.dwcdn.net/kjRSI/2/" scrolling="no" frameborder="0" style="border: none;"></iframe>
+<body>
+
+	<div class="container">
+		<iframe title="COVID-19 - Map of Travel Restrictions" aria-label="World choropleth map"
+			src="https://datawrapper.dwcdn.net/lAhBo/1/" scrolling="no" frameborder="0" style="border: none;"></iframe>
 		<div class="legend">
 			<div class='my-legend'>
 				<div class='legend-scale'>
-				  <ul class='legend-labels'>
-<li><span style='background:#7A0177;'></span></li>
-<li>Regional lockdown</li>
-<li><span style='background:#B91787;'></span></li>
-<li>All foreign nationals</li>
-<li><span style='background:#E64E99;'></span></li>
-<li>Specific countries</li>
-<li><span style='background:#F984AB;'></span></li>
-<li>Transit</li><br>
-<li><span style='background:#FBACB9;'></span></li>
-<li>Quarantine Required</li>
-<li><span style='background:#FCCBC6;'></span></li>
-<li>Other</li>
-<li><span style='background:#FCE36A;'></span></li>
-<li>No restrictions</li>
-<li><span style='background:#E0E0E0;'></span></li>
-<li>Not available</li>
-				  </ul>
-				  </div></div>
+					<ul class='legend-labels'>
+						<li><span style='background:#500050;'></span></li>
+						<li>Regional lockdown</li>
+						<li><span style='background:#B91787;'></span></li>
+						<li>All foreign nationals</li>
+						<li><span style='background:#E64E99;'></span></li>
+						<li>Specific countries</li>
+						<li><span style='background:#F984AB;'></span></li>
+						<li>Transit</li><br>
+						<li><span style='background:#FBACB9;'></span></li>
+						<li>Quarantine Required</li>
+						<li><span style='background:#FCCBC6;'></span></li>
+						<li>Other</li>
+						<li><span style='background:#FCE36A;'></span></li>
+						<li>No restrictions</li>
+						<li><span style='background:#E0E0E0;'></span></li>
+						<li>Not available</li>
+					</ul>
+				</div>
+			</div>
 		</div>
-		<div id="aboutbox" class="box"><button class="close" onclick="btnFunction()" style="position: absolute; right: 0;">CLOSE</button>
-		<h2>Map of Travel Restrictions</h2>
-		<p>This map shows the restriction statuses of most countries around the world. The data is collected from different news articles and government travel advisories. Error? Update? Press? Get in touch.<br><br>Last update was made on March 19, 2020.<br><br>Created by Sam Mehenni.</p></div>
+		<div id="aboutbox" class="box"><button class="close" onclick="btnFunction()"
+				style="position: absolute; right: 0;">CLOSE</button>
+			<h2><span style="color: #7A0177;">COVID-19</span><br>Map of Travel Restrictions</h2>
+			<p>This map shows the restriction statuses of most countries around the world. The data is collected from
+				different news articles and government travel advisories. Error? Update? Press? <a
+					href="https://www.linkedin.com/in/mehenni/" target="_blank">Get in
+					touch.</a><br><br>Last update was made on March 20, 2020.<br><br>Created by <a
+					href="http://mehenni.cargo.site/" target="_blank">Sam Mehenni.</a></p>
+		</div>
 		<button class="about" onclick="btnFunctionOpen()" style="position: absolute; left: 0; bottom: 0;">ABOUT</button>
 	</div>
 
 	<script>
-	function btnFunction() {
-		var x = document.getElementById("aboutbox");
-		if (x.style.display === "none") {
-		  x.style.display = "block";
-		} else {
-		  x.style.display = "none";
-		}	
-	  }
+		function btnFunction() {
+			var x = document.getElementById("aboutbox");
+			if (x.style.display === "none") {
+				x.style.display = "block";
+			} else {
+				x.style.display = "none";
+			}
+		}
 
-	  function btnFunctionOpen() {
-		var x = document.getElementById("aboutbox");
-		if (x.style.display === "none") {
-		  x.style.display = "block";
-		} else {
-		  x.style.display = "none";
-		}	
-	  }	  
-	 
-	  </script>
-  </body>
+		function btnFunctionOpen() {
+			var x = document.getElementById("aboutbox");
+			if (x.style.display === "none") {
+				x.style.display = "block";
+			} else {
+				x.style.display = "none";
+			}
+		}
+
+	</script>
+</body>
+
 </html>
