--- a/map/index.html
+++ b/map/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta data-rh="true" property="og:image" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
-	<meta data-rh="true" name="twitter:image:src" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
+	<meta data-rh="true" property="og:image" content="https://smehenni.github.io/coviz/assets/og-img-map.jpg" />
+	<meta data-rh="true" name="twitter:image:src" content="https://smehenni.github.io/coviz/assets/og-img-map.jpg" />
 	<title>Coviz - Map of Travel Restrictions</title>
 	<link href="https://fonts.googleapis.com/css?family=Sen:400,800&display=swap" rel="stylesheet">
 	<meta name="description" content="Coviz is a collection of data visualizations around the COVID-19 pandemic.">
