--- a/map/index.html
+++ b/map/index.html
@@ -115,6 +115,16 @@
 			margin-right: 5px;
 			margin-left: 10px;
 		}
+
+		@media (max-width: 767px) {
+
+			.legend,
+			#aboutbox,
+			button {
+				display: none;
+			}
+
+		}
 	</style>
 
 </head>
