--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		</div>
 		<div class="col-md-3">
 			<h5>Confirmed cases in Canada</h5>
-			<p>Last update: 20/03/2020</p>
+			<p>Last update: 21/03/2020</p>
 			<iframe title="Covid-19 Cases - Canada" aria-label="Table" id="datawrapper-chart-jBonp" src="https://datawrapper.dwcdn.net/jBonp/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="490"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 			</script>
 		</div>
@@ -93,17 +93,30 @@
 		</div>
 		<div class="col-md-3">
 			<h5>Confirmed cases in Quebec</h5>
-			<p>Last update: 20/03/2020</p>
+			<p>Last update: 21/03/2020</p>
 			<iframe title="Covid-19 Cases - Quebec" aria-label="Table" id="datawrapper-chart-rGsdM" src="https://datawrapper.dwcdn.net/rGsdM/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="453"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 			</script>			</script>
 		</div>
 		<div class="col-md-5">
 			<h5>Confirmed cases by region (Quebec)</h5>
-			<iframe title="Covid-19 Cases - Quebec" aria-label="Stacked Bars" id="datawrapper-chart-IUUxw" src="https://datawrapper.dwcdn.net/IUUxw/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin: 1rem 0;" height="526"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();</script>
+			<iframe title="Covid-19 Cases - Quebec" aria-label="Stacked Bars" id="datawrapper-chart-IUUxw" src="https://datawrapper.dwcdn.net/IUUxw/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin: 1rem 0; margin-bottom: 4rem;" height="526"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();</script>
 		</div>
 		<div class="col-md-2">
 		</div>
 	</div>
+
+	<div class="row">
+	<div class="col-md-2">
+	</div>
+	<div class="col-md-8">
+		<h5>Projected and Confirmed cases in Quebec</h5>
+		<p>Number of projected cases was extracted <a href="https://mobile-img.lpcdn.ca/lpca/924x/c1043320-6b2a-11ea-b33c-02fe89184577.jpg" target="_b">from a chart</a> shared by the MSSS with health professionals.<br>Last update: 20/03/2020</p>		
+	<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-u4nU7" src="https://datawrapper.dwcdn.net/u4nU7/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="436"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+	</script>
+	</div>
+	<div class="col-md-2"></div>
+</div>
+
 	<div class="col-12 mt-5"></div>
 	<div class="row">
 		<div class="col-md-2">
@@ -113,12 +126,12 @@
 			<h2>🌏 World</h2>
 			<div class="col-12 mt-5"></div>
 			<h5>Countries with the most confirmed cases</h5>
-			<p>Last update: 20/03/2020 — Excluding China</p>
+			<p>Last update: 21/03/2020 — Excluding China</p>
 			<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-ruwJ3" src="https://datawrapper.dwcdn.net/ruwJ3/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 			</script>
 			<div class="col-12 mt-5"></div>
 			<h5>Proportion of all active* cases by country</h5>
-			<p>Last update: 20/03/2020 - *recovered cases and deaths were removed</p>
+			<p>Last update: 21/03/2020 - *recovered cases and deaths were removed</p>
 			<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-NfT0c" src="https://datawrapper.dwcdn.net/NfT0c/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="500"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 			</script>
 
