--- a/index.html
+++ b/index.html
@@ -1,149 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta data-rh="true" property="og:image" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
 	<meta data-rh="true" name="twitter:image:src" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
-    <title>Coviz - Visualization of Covid-19 data for Canada and Quebec</title>
+	<title>Coviz - Visualization of Covid-19 data for Canada and Quebec</title>
 
-    <meta name="description" content="Coviz is a collection of data visualizations around the COVID-19 pandemic.">
-    <meta name="author" content="Sam Mehenni">
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+	<meta name="description" content="Coviz is a collection of data visualizations around the COVID-19 pandemic.">
+	<meta name="author" content="Sam Mehenni">
+	<link href="https://fonts.googleapis.com/css?family=Sen:400,800&display=swap" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<style>
-		a {
-  		color: #EE2121 !important;
+		body {
+			margin: 0;
+			font-family: 'Sen', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 		}
 
-		.container-fluid{
+		a {
+			color: #EE2121 !important;
+		}
+
+		a:hover {
+			color: #222222 !important;
+			text-decoration: underline;
+		}
+
+		.nav-link {
+			color: #222222 !important;
+			text-decoration: none;
+		}
+
+		.container-fluid {
 			overflow: hidden;
 		}
 
+		h3, h5 {
+			font-weight: 800;
+		}
 	</style>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161052397-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161052397-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'UA-161052397-1');
-</script>
-  </head>
-  <body>
-
-    <div class="container-fluid">
-		<div class="col-12 mt-5"></div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-8" style="background-color: #f5f5f5; padding-bottom: 3rem; border-radius: 8px;">
-					<img src="assets/coviz.png" width="160px" style="padding: 3rem 0;">
-					<p><b>Coviz</b> is a collection of data visualizations around the COVID-19 pandemic. Data are collected from the <a class="ahead" href="https://www.canada.ca/en/public-health/services/diseases/2019-novel-coronavirus-infection.html#a1" target="_blank">Canadian government Public Health website</a>, the <a class="ahead" href="https://www.quebec.ca/en/health/health-issues/a-z/2019-coronavirus/situation-coronavirus-in-quebec/" target="_blank">Quebec government coronavirus page</a>, and the <a class="ahead" href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports" target="_blank">Data Repository by Johns Hopkins CSSE</a>.</p>
-					<p>Charts are automated using <a class="ahead" href="https://www.datawrapper.de/" target="_blank">Datawrapper</a>. You can download all datasets (in .csv) by clicking the "Get the data" link below visualizations.</p>
-					<p>Created by <a class="ahead" href="http://mehenni.cargo.site/" target="_blank">Sam Mehenni</a>, a concerned citizen and data science enthusiast — <a class="ahead" href="https://www.linkedin.com/in/mehenni/" target="_blank">Get in touch</a>.</p>
-				</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-	<div class="col-12 mt-5"></div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-8">
-			<h2>🇨🇦 Canada</h2>
-		</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-	<div class="col-12 mt-5"></div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-3">
-			<h5>Confirmed cases in Canada</h5>
-			<p>Last update: 21/03/2020</p>
-			<iframe title="Covid-19 Cases - Canada" aria-label="Table" id="datawrapper-chart-jBonp" src="https://datawrapper.dwcdn.net/jBonp/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="490"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-			</script>
-		</div>
-		<div class="col-md-5">
-			<h5>Select a province:</h5>
-			<iframe title="Covid-19 Cases - Canada" aria-label="Column Chart" id="datawrapper-chart-ID4S3" src="https://datawrapper.dwcdn.net/ID4S3/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin: 1rem 0;" height="500"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();</script>
-
-		</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-	<div class="col-12 mt-5"></div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-8">
-			<hr class="col-12" style="padding-bottom: 2rem;" />
-			<h2>🇲🇶 Québec</h2>
-		</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-	<div class="col-12 mt-5"></div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-3">
-			<h5>Confirmed cases in Quebec</h5>
-			<p>Last update: 21/03/2020</p>
-			<iframe title="Covid-19 Cases - Quebec" aria-label="Table" id="datawrapper-chart-rGsdM" src="https://datawrapper.dwcdn.net/rGsdM/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="453"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-			</script>			</script>
-		</div>
-		<div class="col-md-5">
-			<h5>Confirmed cases by region (Quebec)</h5>
-			<iframe title="Covid-19 Cases - Quebec" aria-label="Stacked Bars" id="datawrapper-chart-IUUxw" src="https://datawrapper.dwcdn.net/IUUxw/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin: 1rem 0; margin-bottom: 4rem;" height="526"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();</script>
-		</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-
-	<div class="row">
-	<div class="col-md-2">
-	</div>
-	<div class="col-md-8">
-		<h5>Projected and Confirmed cases in Quebec</h5>
-		<p>Number of projected cases was extracted <a href="https://mobile-img.lpcdn.ca/lpca/924x/c1043320-6b2a-11ea-b33c-02fe89184577.jpg" target="_b">from a chart</a> shared by the MSSS with health professionals.<br>Last update: 20/03/2020</p>		
-	<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-u4nU7" src="https://datawrapper.dwcdn.net/u4nU7/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="436"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+		gtag('config', 'UA-161052397-1');
 	</script>
+</head>
+
+<body>
+
+	<div class="container-fluid">
+		<div class="col-12 mt-5"></div>
+		<div class="row">
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-8" style="background-color: #f5f5f5; padding-bottom: 3rem; border-radius: 8px;">
+				<img src="assets/coviz.png" width="160px" style="padding: 3rem 0;">
+				<p><b>Coviz</b> is a collection of data visualizations around the COVID-19 pandemic. Data are collected
+					from the <a class="ahead"
+						href="https://www.canada.ca/en/public-health/services/diseases/2019-novel-coronavirus-infection.html#a1"
+						target="_blank">Canadian government Public Health website</a>, the <a class="ahead"
+						href="https://www.quebec.ca/en/health/health-issues/a-z/2019-coronavirus/situation-coronavirus-in-quebec/"
+						target="_blank">Quebec government coronavirus page</a>, and the <a class="ahead"
+						href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports"
+						target="_blank">Data Repository by Johns Hopkins CSSE</a>.</p>
+				<p>Charts are automated using <a class="ahead" href="https://www.datawrapper.de/"
+						target="_blank">Datawrapper</a>. You can download all datasets (in .csv) by clicking the "Get
+					the data" link below visualizations.</p>
+				<p>Created by <a class="ahead" href="http://mehenni.cargo.site/" target="_blank">Sam Mehenni</a>, a
+					concerned citizen and data science enthusiast — <a class="ahead"
+						href="https://www.linkedin.com/in/mehenni/" target="_blank">Get in touch</a>.</p>
+			</div>
+			<div class="col-md-2">
+			</div>
+		</div>
+		<div class="col-12 mt-5"></div>
+
+		<div class="row">
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-8">
+				<ul class="nav nav-tabs" role="tablist">
+					<li class="nav-item">
+						<a class="nav-link active" data-toggle="tab" href="#quebec">🇲🇶 Québec</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" data-toggle="tab" href="#canada">🇨🇦 Canada</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" data-toggle="tab" href="#world">🌏 World</a>
+					</li>
+				</ul>
+				<!-- Tab panes -->
+				<div class="tab-content">
+					<div id="quebec" class="container tab-pane active"><br>
+						<h3>Québec</h3>
+						<h5>Confirmed cases in Quebec</h5>
+						<p>Last update: 21/03/2020</p>
+						<iframe title="Covid-19 Cases - Quebec" aria-label="Table" id="datawrapper-chart-rGsdM"
+							src="https://datawrapper.dwcdn.net/rGsdM/1/" scrolling="no" frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
+							height="453"></iframe>
+						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
+						</script>
+						</script>
+						<h5>Confirmed cases by region (Quebec)</h5>
+						<iframe title="Covid-19 Cases - Quebec" aria-label="Stacked Bars" id="datawrapper-chart-IUUxw"
+							src="https://datawrapper.dwcdn.net/IUUxw/2/" scrolling="no" frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin: 1rem 0; margin-bottom: 4rem;"
+							height="526"></iframe>
+						<script
+							type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();</script>
+
+						<h5>Projected and Confirmed cases in Quebec</h5>
+						<p>Number of projected cases was extracted <a
+								href="https://mobile-img.lpcdn.ca/lpca/924x/c1043320-6b2a-11ea-b33c-02fe89184577.jpg"
+								target="_b">from a chart</a> shared by the MSSS with health professionals.<br>Last
+							update:
+							20/03/2020</p>
+						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
+							id="datawrapper-chart-u4nU7" src="https://datawrapper.dwcdn.net/u4nU7/1/" scrolling="no"
+							frameborder="0" style="width: 0; min-width: 100% !important; border: none;"
+							height="436"></iframe>
+						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
+						</script>
+					</div>
+
+					<div id="canada" class="container tab-pane fade"><br>
+						<h3>Canada</h3>
+						<h5>Confirmed cases in Canada</h5>
+						<p>Last update: 21/03/2020</p>
+						<iframe title="Covid-19 Cases - Canada" aria-label="Table" id="datawrapper-chart-jBonp"
+							src="https://datawrapper.dwcdn.net/jBonp/1/" scrolling="no" frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
+							height="490"></iframe>
+						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
+						</script>
+						<h5>Select a province:</h5>
+						<iframe title="Covid-19 Cases - Canada" aria-label="Column Chart" id="datawrapper-chart-ID4S3"
+							src="https://datawrapper.dwcdn.net/ID4S3/3/" scrolling="no" frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin: 1rem 0;"
+							height="500"></iframe>
+						<script
+							type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();</script>
+
+					</div>
+
+
+					<div id="world" class="container tab-pane fade"><br>
+						<h3>World</h3>
+						<h5>Countries with the most confirmed cases</h5>
+						<p>Last update: 21/03/2020 — Excluding China</p>
+						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
+							id="datawrapper-chart-ruwJ3" src="https://datawrapper.dwcdn.net/ruwJ3/4/" scrolling="no"
+							frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
+							height="400"></iframe>
+						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
+						</script>
+						<div class="col-12 mt-5"></div>
+						<h5>Proportion of all active* cases by country</h5>
+						<p>Last update: 21/03/2020 - *recovered cases and deaths were removed</p>
+						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
+							id="datawrapper-chart-NfT0c" src="https://datawrapper.dwcdn.net/NfT0c/1/" scrolling="no"
+							frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
+							height="500"></iframe>
+						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
+						</script>
+
+
+					</div>
+				</div>
+			</div>
+			<div class="col-md-2">
+			</div>
+
+
+		</div>
+
+
 	</div>
-	<div class="col-md-2"></div>
-</div>
-
-	<div class="col-12 mt-5"></div>
-	<div class="row">
-		<div class="col-md-2">
-		</div>
-		<div class="col-md-8">
-			<hr class="col-12" style="padding-bottom: 2rem;" />
-			<h2>🌏 World</h2>
-			<div class="col-12 mt-5"></div>
-			<h5>Countries with the most confirmed cases</h5>
-			<p>Last update: 21/03/2020 — Excluding China</p>
-			<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-ruwJ3" src="https://datawrapper.dwcdn.net/ruwJ3/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-			</script>
-			<div class="col-12 mt-5"></div>
-			<h5>Proportion of all active* cases by country</h5>
-			<p>Last update: 21/03/2020 - *recovered cases and deaths were removed</p>
-			<iframe title="[ Insert title here ]" aria-label="Interactive line chart" id="datawrapper-chart-NfT0c" src="https://datawrapper.dwcdn.net/NfT0c/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;" height="500"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
-			</script>
 
 
-		</div>
-		<div class="col-md-2">
-		</div>
-	</div>
-</div>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+</body>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
 </html>
