add tab for Africa

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 			overflow: hidden;
 		}
 
-		h3, h5 {
+		h3,
+		h5 {
 			font-weight: 800;
 		}
 	</style>
@@ -91,6 +92,9 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" data-toggle="tab" href="#canada">🇨🇦 Canada</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" data-toggle="tab" href="#africa">🐫 Africa</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" data-toggle="tab" href="#world">🌏 World</a>
@@ -148,6 +152,21 @@
 							height="500"></iframe>
 						<script
 							type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();</script>
+
+					</div>
+
+					<div id="africa" class="container tab-pane fade"><br>
+						<h3>Africa</h3>
+						<h5>African countries with the most confirmed cases</h5>
+						<p>Last update: 21/03/2020</p>
+						<iframe title="[ Insert title here ]" aria-label="Interactive line chart"
+							id="datawrapper-chart-sjetK" src="https://datawrapper.dwcdn.net/sjetK/2/" scrolling="no"
+							frameborder="0"
+							style="width: 0; min-width: 100% !important; border: none; margin-bottom: 2rem;"
+							height="421"></iframe>
+						<script type="text/javascript">!function () { "use strict"; window.addEventListener("message", function (a) { if (void 0 !== a.data["datawrapper-height"]) for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']"); t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
+						</script>
+
 
 					</div>
 
