--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta data-rh="true" property="og:image" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
 	<meta data-rh="true" name="twitter:image:src" content="https://smehenni.github.io/coviz/assets/og-img.jpg" />
-	<title>Coviz - Visualization of Covid-19 data for Canada and Quebec</title>
+	<title>Coviz - Visualizations of Covid-19 data</title>
 
 	<meta name="description" content="Coviz is a collection of data visualizations around the COVID-19 pandemic.">
 	<meta name="author" content="Sam Mehenni">
